examples/pgsql-set.yaml
# Define the required Service first. This is a headless Service because
# the clusterIP field is set to None. It is only used to provide a unique
# network name to the Pods in the StatefulSet.
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 2
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        volumeMounts:
        - name: postgres-volume
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: postgres-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
